--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,21 @@ nav
 button
 {
     padding: 5px;
-    color: white;
-    background-color: #48ADF1;
-    border: none;
     border-radius: 4px;
+}
+
+.blue-button
+{
+    background-color: #48ADF1;
+    color: white;
+    border: 1px solid #48ADF1;
+}
+
+.white-button
+{
+    background-color: white;
+    color: #DADEE0;
+    border: 1px solid #DADEE0;
 }
 
 /* ul general */
@@ -69,6 +80,7 @@ li
     margin-top: 15px;
     margin-bottom: 15px;
 }
+
 /* entities */
 .check-mark
 {
@@ -92,7 +104,7 @@ li
     margin: auto;
 }
 
-/* task */
+/* task font */
 .task
 {
     font-family: 'Roboto', sans-serif;
@@ -140,6 +152,8 @@ li
 {
     background-color: #B0C925;
 }
+
+
 
 
 
